# player-performance-ratings

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  __init__.py  benchmark_inference.py  pyproject.toml  requirements.txt  setup.py  tmpclaude-deaa-cwd
.claude/: settings.json  settings.local.json  settings.local.json.bak
.github/: BRANCH_PROTECTION.md
.github/workflows/: tests.yml  version-auto-bump.yml  version-check.yml
examples/: 44.py  __init__.py  example_utils.py  game_level_example.py  utils.py
examples/lol/: custom_performance.py  lol_game_winner.py  lol_match_predictor_tuner.py  lol_pipeline_transformer_example.py  lol_total_kills.py  match_predictor_tuner.py  performance_tuner.py  pipeline_transformer_example.py  player_rating_tuner.py  simple_game_winner.py  simple_player_ratings.py  start_rating_tuner.py  total_kills_predictor.py  total_kills_tuner.py
examples/nba/: 22.py  cross_validation_example.py  feature_engineering_example.py  game_winner.py  game_winner_example.py  game_winner_guide.ipynb  gw2.py  match_predictor_tuner.py  minutes_predictions_example.py  nba_game_winner.py  nba_match_lineup_tuning.py  nba_match_prediction_tuning.py  nba_player_points.py  nba_player_points_cv_example.py  nba_total_points_lineup.py  nba_total_points_lineup_tuning.py  opp_test_ex.py  player_points_end_to_end_part1.ipynb  player_points_end_to_end_part3.ipynb  player_points_full_end_to_end.ipynb  predictor_transformers_example.py
examples/ncaaf/: add_team_div.py  air_yards.py  q1_data  q1_data_tie  q1_points_diff.py  q1_tie.py  q1_won.py  rush_yards.py  rush_yards2.py  score_ex.py
examples/nfl/: example.py
player_performance_ratings/: __init__.py  consts.py  data_structures.py  pipeline.py  pipeline_factory.py  pipeline_transformer.py  utils.py
player_performance_ratings/cross_validator/: __init__.py  _base.py  cross_validator.py
player_performance_ratings/examples/: utils.py
player_performance_ratings/predictor/: __init__.py  _base.py  classifier.py  estimator.py  match_predictor.py  predictor.py  sklearn_estimator.py  sklearn_models.py  transformer.py
player_performance_ratings/predictor_transformer/: __init__.py  _simple_transformer.py  transformer.py
player_performance_ratings/preprocessing/: base_transformer.py  common.py
player_performance_ratings/ratings/: __init__.py  data_prepararer.py  data_structures.py  enums.py  league_identifier.py  match_generator.py  performances_generator.py  player_performance_rating.py  rating_generator.py  time_weight_rating_generator.py  time_weight_ratings.py  update_rating_generator.py
player_performance_ratings/scorer/: __init__.py  base_score.py  score.py
player_performance_ratings/transformation/: __init__.py  base_transformer.py  factory.py  post_transformers.py  pre_transformers.py  prediction_normalizers.py
player_performance_ratings/transformations/: post_transformers.py  pre_transformers.py
player_performance_ratings/transformers/: __init__.py  _lag.py  _rolling_mean.py  _rolling_mean_binary.py  _rolling_mean_days.py  base_transformer.py  common.py  lag_generators.py  performances_transformers.py  rolling_mean_binary.py  transformers.py
player_performance_ratings/tuner/: __init__.py  base_tuner.py  match_predicter_tuner.py  match_predictor_factory.py  performance_generator_tuner.py  performances_generator_tuner.py  pipeline_tuner.py  player_rating_tuner.py  pre_transformer_tuner.py  predictor_tuner.py  rating_generator_tuner.py  start_rating_optimizer.py  start_rating_tuner.py  team_rating_tuner.py  transformer_tuner.py  (+1 more)
spforge/: __init__.py  autopipeline.py  base_feature_generator.py  data_structures.py  features_generator.py  features_generator_pipeline.py  pipeline.py  pipeline_factory.py  pipeline_transformer.py  utils.py
tests/: test_autopipeline.py  test_autopipeline_context.py  test_feature_generator_pipeline.py  test_pipeline.py  test_pipeline_transformer.py
(+315 files in other folders)
