[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spforge"
version = "0.5.7"
description = "A flexible framework for generating features, ratings, and building machine learning or other models for training and inference on sports data."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Mathias Holmstrøm", email = "mathiasholmstom@gmail.com"}
]
license = {text = "See LICENSE file"}
keywords = ["sports", "machine-learning", "ratings", "features"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.23.4",
    "optuna>=3.4.0",
    "pandas>=2.0.0",
    "pendulum>=1.0.0",
    "scikit-learn>=1.3.1",
    "lightgbm>=4.0.0",
    "narwhals>2.0.0",
    "polars>=1.17.0",
    "pyarrow>=19.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "deepdiff>=8.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Hiderdk/player-performance-ratings"
Repository = "https://github.com/Hiderdk/player-performance-ratings"

[tool.setuptools]
packages = ["spforge", "examples"]

[tool.setuptools.package-data]
"examples.nba" = ["data/*.parquet"]
"examples.lol" = ["data/*.parquet"]

